--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
 	implementation 'com.google.guava:guava:31.0.1-jre'
+	implementation 'com.vladmihalcea:hibernate-types-55:2.14.0'
   // implementation 'org.reflections:reflections:0.10.2'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
